# vui

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  bootstrap.sh  demo.py  docker-compose.yml  inference.py  install.sh  pyproject.toml  readme.md  sample_texts.json  test_vad.py  test_vad_code_review.py  test_vad_simple.py
docker/: Dockerfile.claude  Dockerfile.stream
docs/: claude-task-server.md  configuration.md  memory-budget.md  mobile.md  prompting.md  python-api.md  realtime-api.md  releasing.md  soul.md  thoughts-tools.md
scripts/: build_all_prompts.py  build_prompt.py  prep_public_ckpt.py  prep_public_prompt.py
src/vui/: __init__.py  align.py  config.py  engine.py  geo.py  hf.py  inference.py  model.py  notebook.py  prompt_utils.py  qwen_codec.py  qwen_spk_enc.py  rope.py  sampling.py  streaming.py  telemetry.py  tokenizer.py  vad.py
src/vui/demo/: cli.py
src/vui/mlx/asr/: load.py  model.py
src/vui/mlx/tts/: codec.py  generate.py  model.py  stream.py  weights.py
src/vui/serving/: claude_server.py
src/vui/serving/stream/: __main__.py  _log.py  asr_worker.py  audio_in_worker.py  codec_worker.py  connection.py  drains.py  frontend.py  index.html  llm.py  llm_backend.py  memories.py  model_routes.py  playback.py  prompt_routes.py  prompts.py  protocol.py  server.py  tasks.py  test_routes.py  text_utils.py  thoughts.py  tls.py  tts_worker.py  tts_worker_mlx.py  vad.py  version_check.py  visualizer.js  voice_note_routes.py  voice_turn.py  wake_word.py
src/vui/serving/stream/asr/: __init__.py  base.py  fwhisper.py  mlx_whisper.py  moonshine.py
src/vui/serving/stream/realtime/: __init__.py  adapter.py  audio.py  inbound.py  outbound.py  routes.py  sinks.py
src/vui/serving/stream/tools/: SPEC.md  __init__.py  add_memory.py  answer_capability.py  cancel_task.py  check_task.py  clear_context.py  clear_memories.py  clear_tasks.py  delegate.py  delete_task.py  list_tasks.py  no_action.py  propose_tool.py  remove_memory.py  set_speech_rate.py  set_timer.py
src/vui/serving/stream/tools/web_search/: __init__.py  brave.py  serper.py  tavily.py
tests/: spell_experiment.py  test_litellm_backend.py  test_python_api_doc.py
