[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vui"
description = "Voice user interfaces"
dynamic = ["version"]

requires-python = "==3.12.3"

dependencies = [
    "einops==0.8.1",
    "inflect==7.5.0",
    "gradio==5.33.0",
    "numba==0.61.2",
    "numpy>=1.24.0",
    # "openai-whisper>=20231117",
    "pydantic==2.11.5",
    "soundfile==0.13.1",
    "tiktoken==0.9.0",
    "julius",
    "torch>=2.10.0",
    "torchcodec>=0.10.0",
    "transformers==4.52.4",
]

[tool.uv]
override-dependencies = [
    "torch>=2.10",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
ignore-error-codes = [403]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchcodec = { index = "pytorch-cu130" }

[tool.setuptools.packages.find]
where = ["src"]
